# ExamGenerator

./: .dockerignore  .env.example  .gitignore  Dockerfile  MAKEFILE  Makefile.docker  README.md  cli.py  config.yaml  debug_log.txt  deploy.ps1  docker-compose.yml  eg.py  generate_secret.py  install.ps1  install.sh  install_quick.sh  manage.bat  manage.ps1  manage.sh  nginx_examgenerator.conf  preguntas.txt  pyproject.toml  pyrightconfig.json  qg.py  requirements.txt  run_web.py  start.bat  start.ps1  start.sh
.github/: RELEASE_NOTES_v12.md  copilot-instructions.md
.github/workflows/: ci.yaml
docs/: CHANGELOG.md  CHANGELOG_OLLAMA.md  DOCKER.md  DOCKER_STACK_RESUMEN.md  FEATURE_PLANTILLAS_WEB.md  IMPLEMENTACION_V11.md  MEJORAS_PROPUESTAS.md  MIGRACION_UV.md  MIGRATION_V12.md  OLLAMA_AUTOSTART.md  OLLAMA_SETUP.md  PROPUESTAS_REORGANIZACION.md  QUICK_START.md  QUICK_START_V11.md  README.md  RESUMEN_IMPLEMENTACION_V12.md  RESUMEN_MIGRACION_UV.md  RESUMEN_REORGANIZACION.md  UV_INFO.md  copilot-instructions.md
examgenerator/: __init__.py  ai.py  config.py  web_runner.py
examgenerator/ai/: __init__.py
examgenerator/core/: __init__.py  directory_manager.py  exam_generator.py  question_loader.py  shuffler.py  time_calculator.py
examgenerator/exporters/: __init__.py  csv_exporter.py  docx_exporter.py  excel_exporter.py  html_exporter.py  txt_exporter.py
examgenerator/utils/: __init__.py  cache.py  counter.py  logging_config.py  settings.py  statistics.py  validators.py
examgenerator/web/: app.py
examgenerator/web/outputs/: preguntas_20260111_204107.txt  preguntas_20260111_205056.txt  preguntas_20260111_205350.txt
examgenerator/web/templates/: base.html  generate_exams.html  generate_questions.html  index.html  settings.html
examples/: demo_features.py  documento_ia.docx  documento_prueba.txt
output/: .gitkeep  README.md
scripts/: MAKEFILE  debug_server.py  deploy.ps1  deploy.py  docker-quickstart.ps1  docker-quickstart.sh  install.ps1  install.sh  setup.sh  start.bat  start.ps1  start.sh
templates/: README.md
tests/: test_autostart.py  test_cache.py  test_ollama.py  test_setup.py  test_validators.py
